refactor(vocabulary): 分离单词卡生成提供方